// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Badge /> should renders correctly 1`] = `
<Badge
  color="#00b8d4"
  fields={
    Array [
      Object {
        "type": "text",
        "value": "Система скидок",
      },
    ]
  }
  href="https://sima-land.ru"
>
  <a
    className="root interactive"
    href="https://sima-land.ru"
    style={
      Object {
        "--badge-color": "#00b8d4",
      }
    }
  >
    <span
      className="content"
    >
      Система скидок
    </span>
  </a>
</Badge>
`;

exports[`<Badge /> should renders correctly 2`] = `
<Badge
  color="#ff7200"
  fields={
    Array [
      Object {
        "type": "svg-url",
        "value": "https://static2.static1-sima-land.com/image/mobile_app/common/notice_icon.svg",
      },
    ]
  }
  href="https://sima-land.ru"
>
  <a
    className="root icon-only interactive"
    href="https://sima-land.ru"
    style={
      Object {
        "--badge-color": "#ff7200",
      }
    }
  >
    <img
      className="icon"
      src="https://static2.static1-sima-land.com/image/mobile_app/common/notice_icon.svg"
    />
  </a>
</Badge>
`;

exports[`<Badge /> should renders correctly 3`] = `
<Badge
  color="#b52ea8"
  fields={
    Array [
      Object {
        "type": "timer",
        "value": "2021-01-08T09:00:00.000Z",
      },
    ]
  }
  href="https://sima-land.ru"
>
  <a
    className="root interactive"
    href="https://sima-land.ru"
    style={
      Object {
        "--badge-color": "#b52ea8",
      }
    }
  >
    <span
      className="content"
    >
      <Timer
        date="2021-01-08T09:00:00.000Z"
        format={[Function]}
        key="0"
        timeout={60000}
      >
        07:00:00
      </Timer>
    </span>
  </a>
</Badge>
`;

exports[`<Badge /> should renders correctly 4`] = `
<Badge
  color="#b52ea8"
  fields={
    Array [
      Object {
        "type": "timer",
        "value": "2021-04-01T09:00:00.000Z",
      },
      Object {
        "type": "text",
        "value": " — Специальные цены на музыкальные инструменты",
      },
    ]
  }
  href="https://sima-land.ru"
>
  <a
    className="root interactive"
    href="https://sima-land.ru"
    style={
      Object {
        "--badge-color": "#b52ea8",
      }
    }
  >
    <span
      className="content"
    >
      <Timer
        date="2021-04-01T09:00:00.000Z"
        format={[Function]}
        key="0"
        timeout={60000}
      >
        90:00:00
      </Timer>
       
       — Специальные цены на музыкальные инструменты
    </span>
  </a>
</Badge>
`;

exports[`<Badge /> should renders correctly 5`] = `
<Badge
  color="#607d8b"
  fields={
    Array [
      Object {
        "type": "text",
        "value": "Уценённый товар",
      },
    ]
  }
>
  <span
    className="root"
    style={
      Object {
        "--badge-color": "#607d8b",
      }
    }
  >
    <span
      className="content"
    >
      Уценённый товар
    </span>
  </span>
</Badge>
`;
